--- a/deliverables/queens/ironic-python-agent.yaml
+++ b/deliverables/queens/ironic-python-agent.yaml
@@ -17,6 +17,10 @@ releases:
       - hash: de32d66ce3d633c44b85a42563906ac018fd410a
         repo: openstack/ironic-python-agent
     version: 3.2.0
+  - projects:
+      - hash: 08668d82e2eb7cee657ae7b7e4f225b0ee0a0c63
+        repo: openstack/ironic-python-agent
+    version: 3.2.1
 branches:
   - location: 3.2.0
     name: stable/queens
