--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -31,3 +31,7 @@ releases:
       - hash: 7e4ca449a0a73b2151ad10bf38f71b48215dfffc
         repo: openstack/oslo.messaging
     version: 6.4.0
+  - projects:
+      - hash: e0835c5ba8f5a995897ca54fec335c21262b924a
+        repo: openstack/oslo.messaging
+    version: 6.4.1
