--- a/deliverables/pike/python-manilaclient.yaml
+++ b/deliverables/pike/python-manilaclient.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: 52e3cb17290747e110798e3185ade79e4c11344f
         repo: openstack/python-manilaclient
     version: 1.17.2
+  - projects:
+      - hash: de2fd1daa850e6cc728251e286392f8c20b0d50c
+        repo: openstack/python-manilaclient
+    version: 1.17.3
 team: manila
 type: library
 repository-settings:
