--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -40,5 +40,9 @@ releases:
       - hash: 0e315fd30a12c7fd012d98c6ebfc2ce2fdfb9cb9
         repo: openstack/ceilometer
     version: 8.1.4
+  - projects:
+      - hash: 0e315fd30a12c7fd012d98c6ebfc2ce2fdfb9cb9
+        repo: openstack/ceilometer
+    version: 8.1.5
 repository-settings:
   openstack/ceilometer: {}
