--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 7a3770a6de1366886e947960023c963fc7efe68b
         repo: openstack/ceilometer
     version: 9.0.5
+  - projects:
+      - hash: 51d4ea0a1544db06159a8d8037131428a42cc651
+        repo: openstack/ceilometer
+    version: 9.0.6
 branches:
   - location: 9.0.0
     name: stable/pike
