--- a/deliverables/queens/aodh.yaml
+++ b/deliverables/queens/aodh.yaml
@@ -9,6 +9,10 @@ releases:
     projects:
       - repo: openstack/aodh
         hash: dff1529d09fa8a1b79c4fd220a84c503f6263c2d
+  - version: 6.0.1
+    projects:
+      - repo: openstack/aodh
+        hash: 149d3ad2193b4d17df801f82a0a6be62dba564db
 repository-settings:
   openstack/aodh: {}
 branches:
