--- a/deliverables/rocky/python-aodhclient.yaml
+++ b/deliverables/rocky/python-aodhclient.yaml
@@ -4,5 +4,11 @@ launchpad: python-aodhclient
 release-model: cycle-with-intermediary
 team: Telemetry
 type: client-library
+releases:
+  - version: 1.1.0
+    projects:
+      - repo: openstack/python-aodhclient
+        hash: 6d1ad0fba7fe4790a19eefc6b8f9d506674720ae
+        tarball-base: aodhclient
 repository-settings:
   openstack/python-aodhclient: {}
