mark tripleo deliverables for newton EOL
Change-Id: I3671f10d5a2fef0e91510a40835de962637f16e5
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -87,6 +87,10 @@ releases:
       - hash: 74ad204741adbe5c807aec2f7c8eacbfb51637f3
         repo: openstack/instack-undercloud
     version: 5.3.10
+  - projects:
+      - hash: 74ad204741adbe5c807aec2f7c8eacbfb51637f3
+        repo: openstack/instack-undercloud
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
