--- a/deliverables/newton/os-net-config.yaml
+++ b/deliverables/newton/os-net-config.yaml
@@ -55,6 +55,10 @@ releases:
       - hash: 3930b393e071760ff284055102efd843e82647ba
         repo: openstack/os-net-config
     version: 5.2.5
+  - projects:
+      - hash: 3930b393e071760ff284055102efd843e82647ba
+        repo: openstack/os-net-config
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
