--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -70,6 +70,10 @@ releases:
       - hash: ac5e3fc860fbbde41a347bf2fe55838228e6dc88
         repo: openstack/tripleo-common
     version: 5.4.9
+  - projects:
+      - hash: ac5e3fc860fbbde41a347bf2fe55838228e6dc88
+        repo: openstack/tripleo-common
+    version: newton-eol
 team: tripleo
 type: library
 repository-settings:
