--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -99,6 +99,10 @@ releases:
       - hash: 4764a847f71fb2226668ff9cff2c92c23f6a90a7
         repo: openstack/tripleo-heat-templates
     version: 5.3.13
+  - projects:
+      - hash: 341ed22ce3007069c6aa1ce85f886ebc8e30ef9a
+        repo: openstack/tripleo-heat-templates
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
