--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -89,6 +89,10 @@ releases:
       - hash: 95c442e1d044d627e402c7bfbbe093763ec96b66
         repo: openstack/puppet-tripleo
     version: 5.6.11
+  - projects:
+      - hash: 72aa53f5e8da4e3632f744c3ceab77570a993946
+        repo: openstack/puppet-tripleo
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
