--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -73,6 +73,10 @@ releases:
       - hash: 221664faa128557fa1eb415837675a55a1560131
         repo: openstack/oslo.messaging
     version: 5.30.2
+  - projects:
+      - hash: 623ba0d0e6858a52cb40d3532f9e12335e53c390
+        repo: openstack/oslo.messaging
+    version: 5.30.3
 branches:
   - name: stable/pike
     location: 5.30.0
