stable releases for barbican and python-barbicanclient
Change-Id: Ia1119ea7d1e3dd3eb0b989955f6c7c0d88a0bfa5

--- a/deliverables/pike/barbican.yaml
+++ b/deliverables/pike/barbican.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: e6c4f8cd7363f6662c30b276140fb2b8c9132326
         repo: openstack/barbican
     version: 5.0.0
+  - projects:
+      - hash: 5e756a70861e66ee52b7b20d00fc9607ad21d133
+        repo: openstack/barbican
+    version: 5.0.1
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
