--- a/deliverables/pike/python-barbicanclient.yaml
+++ b/deliverables/pike/python-barbicanclient.yaml
@@ -24,6 +24,10 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 714fce222816ad3348d4ba4c3baaa721308158e2
+  - projects:
+      - hash: 9f6dcb0617217241ea4260bd421b19dde35160b5
+        repo: openstack/python-barbicanclient
+    version: 4.5.3
 branches:
   - location: 4.5.2
     name: stable/pike
