--- a/deliverables/queens/barbican.yaml
+++ b/deliverables/queens/barbican.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 5b525f6b0a7cf5342a9ffa3ca3618028d6d53649
         repo: openstack/barbican
     version: 6.0.0
+  - projects:
+      - hash: f83cfcafd49a12983d25653fd2bb86a11a74b247
+        repo: openstack/barbican
+    version: 6.0.1
 repository-settings:
   openstack/barbican: {}
 branches:
