--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -42,6 +42,10 @@ releases:
       - hash: 4fb3a702ba8c3de24c41a6f706597bfa81e60435
         repo: openstack/cinder
     version: 11.1.0
+  - projects:
+      - hash: 74549cf7e0ecb4e56675d2ead5f98afb341321e7
+        repo: openstack/cinder
+    version: 11.1.1
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
