--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: f68e7822f46ec9577e5a866a67cc54b777240486
         repo: openstack/neutron
     version: 12.0.2
+  - projects:
+      - hash: 9eef1db160521076d8243f1980e681f0f04ecbc6
+        repo: openstack/neutron
+    version: 12.0.3
 repository-settings:
   openstack/neutron: {}
 branches:
