--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -50,6 +50,10 @@ releases:
       - hash: 1d3568da772dfba989f6b0f18a99f6d02860c2a6
         repo: openstack/neutron
     version: 11.0.4
+  - projects:
+      - hash: e3ff53e3fcf6f12b25788642a281d69cbb3943c1
+        repo: openstack/neutron
+    version: 11.0.5
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
