--- a/deliverables/ocata/neutron.yaml
+++ b/deliverables/ocata/neutron.yaml
@@ -57,5 +57,9 @@ releases:
       - hash: 93330aca08c30febe8318b3054177d7458fa5283
         repo: openstack/neutron
     version: 10.0.6
+  - projects:
+      - hash: f71afa5b38c5360e5a134c5ab436bb99be6860a9
+        repo: openstack/neutron
+    version: 10.0.7
 repository-settings:
   openstack/neutron: {}
