--- a/deliverables/rocky/os-client-config.yaml
+++ b/deliverables/rocky/os-client-config.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: a21123c384e6ff11269b7e6056f940de48413cab
         repo: openstack/os-client-config
     version: 1.31.1
+  - projects:
+      - hash: a024da3618c4a2a69eca0d83f6e4b34fa25643ca
+        repo: openstack/os-client-config
+    version: 1.31.2
