--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -14,5 +14,9 @@ releases:
       - hash: 7c723f6a1eefc3180f2af75d2faac3aab5371aab
         repo: openstack/openstacksdk
     version: 0.13.0
+  - projects:
+      - hash: 07d3828860ffd3078a5c594b7fc80b2ba9fc560a
+        repo: openstack/openstacksdk
+    version: 0.14.0
 repository-settings:
   openstack/openstacksdk: {}
