Oslo releases for 2018-6-18
Change-Id: I57d753db28b31a5c5db053f4241e13f3b0c4d04c

--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: 06b64aea945d7025d77ec3f97a381d1bf0e606ca
         repo: openstack/oslo.db
     version: 4.38.0
+  - projects:
+      - hash: 43af1cf08372006aa46d836ec45482dd4b5b5349
+        repo: openstack/oslo.db
+    version: 4.39.0
