--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -35,3 +35,7 @@ releases:
       - hash: e0835c5ba8f5a995897ca54fec335c21262b924a
         repo: openstack/oslo.messaging
     version: 6.4.1
+  - projects:
+      - hash: d666aa8f0383d4fb46e278043e20e33908b26790
+        repo: openstack/oslo.messaging
+    version: 6.5.0
