--- a/deliverables/rocky/oslo.serialization.yaml
+++ b/deliverables/rocky/oslo.serialization.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: bd10ae04a1e54be2c3817e6bdd5323d1fc59e99a
         repo: openstack/oslo.serialization
     version: 2.26.0
+  - projects:
+      - hash: fb15d638b1389ccc05d18c20ff478d483643c9d9
+        repo: openstack/oslo.serialization
+    version: 2.27.0
