--- a/deliverables/rocky/oslo.utils.yaml
+++ b/deliverables/rocky/oslo.utils.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 0fb1b0aabe100bb36d0e4ad6d5a9f96dd8eb6ff6
         repo: openstack/oslo.utils
     version: 3.36.2
+  - projects:
+      - hash: 8b0a17ed6e8b9eea8a749208b8e63301aa842ab9
+        repo: openstack/oslo.utils
+    version: 3.36.3
