--- a/deliverables/rocky/oslo.versionedobjects.yaml
+++ b/deliverables/rocky/oslo.versionedobjects.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 29e643e4a93333866b33965b68fc8dfb8acf30fa
         repo: openstack/oslo.versionedobjects
     version: 1.33.1
+  - projects:
+      - hash: 1df54146185f8245f29fe8999e89027c4bc0e306
+        repo: openstack/oslo.versionedobjects
+    version: 1.33.2
