--- a/deliverables/rocky/python-blazarclient.yaml
+++ b/deliverables/rocky/python-blazarclient.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/python-blazarclient
         hash: 122ca0844c51e693f294279a40a454a3e61b995e
+  - version: 1.1.1
+    projects:
+      - repo: openstack/python-blazarclient
+        hash: b51395f392e0a875660c431bd457259b4b0d2865
