--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -33,6 +33,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.8.0
+  - projects:
+      - hash: ebe781a3ea0386d6ff088a84e8dde26e538b856d
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.9.0
 team: keystone
 type: library
 repository-settings:
