--- a/deliverables/rocky/release-test.yaml
+++ b/deliverables/rocky/release-test.yaml
@@ -37,3 +37,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 1.0.0.0b1
+  - projects:
+      - hash: 32562f743268e874a5f0da760f05d18261ccdd99
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 1.0.0
