--- a/deliverables/rocky/cliff.yaml
+++ b/deliverables/rocky/cliff.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 5e4b3bedc073bed61716ae7e47780d8192a1c34f
         repo: openstack/cliff
     version: 2.12.0
+  - projects:
+      - hash: 92672471a2031a33c2b42218393d3305cdb2239a
+        repo: openstack/cliff
+    version: 2.12.1
