--- a/deliverables/rocky/python-keystoneclient.yaml
+++ b/deliverables/rocky/python-keystoneclient.yaml
@@ -7,6 +7,10 @@ releases:
       - hash: 935401e67b78a7d6c455e68b609f934a411102f3
         repo: openstack/python-keystoneclient
     version: 3.16.0
+  - projects:
+      - hash: 234ea50d5dfa3c6b71c15d32223a2ddf84c1aa1e
+        repo: openstack/python-keystoneclient
+    version: 3.17.0
 team: keystone
 type: client-library
 repository-settings:
