--- a/deliverables/_independent/xstatic-angular-material.yaml
+++ b/deliverables/_independent/xstatic-angular-material.yaml
@@ -10,5 +10,10 @@ releases:
       - repo: openstack/xstatic-angular-material
         hash: 9f6499b08176383eb93a0e5c0917528e50eff65c
         tarball-base: XStatic-Angular-Material
+  - version: 1.1.5.1
+    projects:
+      - repo: openstack/xstatic-angular-material
+        hash: 32f969a32abf2ee50821ac00cbe4339ea6cce3d5
+        tarball-base: XStatic-Angular-Material
 repository-settings:
   openstack/xstatic-angular-material: {}
