--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -132,5 +132,9 @@ releases:
       - hash: d51a548489d209aec3d41b9e349da4ed835a4a37
         repo: openstack/pymod2pkg
     version: 0.13.3
+  - projects:
+      - hash: afde7c91a90081d5a8af047c619774c17ab985c6
+        repo: openstack/pymod2pkg
+    version: 0.14.0
 repository-settings:
   openstack/pymod2pkg: {}
