sphinx-feature-classification 0.2.0
This adds Python 3 compatibility.

Change-Id: I3500430b64f11252c1bef1501d305cdd1a02f00c
Signed-off-by: Stephen Finucane <sfinucan@redhat.com>

--- a/deliverables/_independent/sphinx-feature-classification.yaml
+++ b/deliverables/_independent/sphinx-feature-classification.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/sphinx-feature-classification
         hash: 61768847b8a4a67e722d937a7ff5ffa7f09e74cc
+  - version: 0.2.0
+    projects:
+      - repo: openstack/sphinx-feature-classification
+        hash: 34e2fddbddaf01907cd6edc56c9bf6bb293bb7aa
 repository-settings:
   openstack/sphinx-feature-classification: {}
