--- a/deliverables/rocky/python-cinderclient.yaml
+++ b/deliverables/rocky/python-cinderclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 35b99baf6e0da5b13fa72b50d7a20ff1944776de
         repo: openstack/python-cinderclient
     version: 3.6.0
+  - projects:
+      - hash: a4fc1416ef43669aafd7dca6e95d68b4119fded5
+        repo: openstack/python-cinderclient
+    version: 3.6.1
