--- a/deliverables/rocky/sushy.yaml
+++ b/deliverables/rocky/sushy.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: fc012cb706540c5f72709ebdc4d284021c8e3141
         repo: openstack/sushy
     version: 1.4.0
+  - projects:
+      - hash: 31cdd0f951bcd6c8a9b2d3f9628468aef5e7883b
+        repo: openstack/sushy
+    version: 1.5.0
