--- a/deliverables/rocky/python-ironicclient.yaml
+++ b/deliverables/rocky/python-ironicclient.yaml
@@ -9,5 +9,9 @@ releases:
       - hash: 964556bb8ce623fc47ee3378fb11ae77225c0b75
         repo: openstack/python-ironicclient
     version: 2.3.0
+  - projects:
+      - hash: a49938dad21c173a69390742e061143b42557006
+        repo: openstack/python-ironicclient
+    version: 2.4.0
 repository-settings:
   openstack/python-ironicclient: {}
