--- a/deliverables/rocky/ironic-ui.yaml
+++ b/deliverables/rocky/ironic-ui.yaml
@@ -6,3 +6,8 @@ team: ironic
 type: horizon-plugin
 repository-settings:
   openstack/ironic-ui: {}
+releases:
+  - projects:
+      - hash: 4823b8d76345897affa4d874a96aaa6e8b275c14
+        repo: openstack/ironic-ui
+    version: 3.2.0
