--- a/deliverables/rocky/networking-generic-switch.yaml
+++ b/deliverables/rocky/networking-generic-switch.yaml
@@ -6,3 +6,8 @@ release-model: cycle-with-intermediary
 include-pypi-link: yes
 repository-settings:
   openstack/networking-generic-switch: {}
+releases:
+  - projects:
+      - hash: eb3187863bfc3f60a5ea0f136ec3c14a8c8d6d71
+        repo: openstack/networking-generic-switch
+    version: 1.1.0
