--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -40,5 +40,9 @@ releases:
       - hash: d556ee9cccba6c071327c4ab005ed1374f47db87
         repo: openstack/ironic
     version: 9.1.4
+  - projects:
+      - hash: 00102e3e46c7bda873c9975364ea07f22c34d12d
+        repo: openstack/ironic
+    version: 9.1.5
 repository-settings:
   openstack/ironic: {}
