--- a/deliverables/ocata/ironic.yaml
+++ b/deliverables/ocata/ironic.yaml
@@ -28,5 +28,9 @@ releases:
       - hash: bde3d3fb8692c2d4aa4e920b20dd19e05f8ce930
         repo: openstack/ironic
     version: 7.0.4
+  - projects:
+      - hash: 00914c802ded15a6ad4643a1a8b277a5342ed5a6
+        repo: openstack/ironic
+    version: 7.0.5
 repository-settings:
   openstack/ironic: {}
