--- a/deliverables/pike/ironic-inspector.yaml
+++ b/deliverables/pike/ironic-inspector.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 35828784d5124dfc66842a790282f9f7d03251fe
         repo: openstack/ironic-inspector
     version: 6.0.2
+  - projects:
+      - hash: 99c88629ad879e5c50c113f2fcd62f49a711ce3f
+        repo: openstack/ironic-inspector
+    version: 6.0.3
 branches:
   - location: 6.0.0
     name: stable/pike
