--- a/deliverables/rocky/python-zunclient.yaml
+++ b/deliverables/rocky/python-zunclient.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: 5139c4682f693a8d61f5d4ff3bc9b559d2970205
+  - version: 2.0.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: e1056ebdd5224251ca47c31c63fccb245e4513e5
 repository-settings:
   openstack/python-zunclient: {}
