Oslo releases for 2018-6-26
Change-Id: I5133d03665716436f6e89d5ad253f2557a183095

--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -31,3 +31,7 @@ releases:
       - hash: 3e7eecc9f43e4b326018c09d6976489ba5b0d098
         repo: openstack/oslo.config
     version: 6.2.1
+  - projects:
+      - hash: 9c71b0140931b51ffffc3bbdc1b655fdaccce45b
+        repo: openstack/oslo.config
+    version: 6.2.2
