--- a/deliverables/rocky/oslo.log.yaml
+++ b/deliverables/rocky/oslo.log.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 89bbb3fb79ecfa45ed41afee86900131b3e37dc6
         repo: openstack/oslo.log
     version: 3.38.1
+  - projects:
+      - hash: 3b43002a3172d990cf48304dd743c97162ece1f3
+        repo: openstack/oslo.log
+    version: 3.39.0
