--- a/deliverables/rocky/oslo.versionedobjects.yaml
+++ b/deliverables/rocky/oslo.versionedobjects.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 1df54146185f8245f29fe8999e89027c4bc0e306
         repo: openstack/oslo.versionedobjects
     version: 1.33.2
+  - projects:
+      - hash: d46aea7e3c0411956f0b7afdcf08a7ae4500cdd9
+        repo: openstack/oslo.versionedobjects
+    version: 1.33.3
