--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: f69970eeee1696a111f8adde62f145274300319d
         repo: openstack/oslo.vmware
     version: 2.29.2
+  - projects:
+      - hash: 9ef646629441b5992ca346a9f419446b5a4b9177
+        repo: openstack/oslo.vmware
+    version: 2.30.0
