--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: 2dc5678f4fbe69fc5615f5f796def5761561a043
         repo: openstack/oslotest
     version: 3.5.0
+  - projects:
+      - hash: 897823fbd61ae9ba015af38e9fed5a5728de64c2
+        repo: openstack/oslotest
+    version: 3.6.0
