--- a/deliverables/rocky/osprofiler.yaml
+++ b/deliverables/rocky/osprofiler.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: e1ba98e13a598f2df7d3f18376680e372adc309d
         repo: openstack/osprofiler
     version: 2.1.0
+  - projects:
+      - hash: 4bec736b1893e800ef27a0e457d2e227af3c56ae
+        repo: openstack/osprofiler
+    version: 2.2.0
