--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/neutron-lib
         hash: d3365c6e8062bfa7b52e156cd46a633371b774f0
+  - version: 1.17.0
+    projects:
+      - repo: openstack/neutron-lib
+        hash: abc287647b49d7651c2f122de0e51c2d94d78bfa
 repository-settings:
   openstack/neutron-lib: {}
