--- a/deliverables/rocky/os-traits.yaml
+++ b/deliverables/rocky/os-traits.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 8888c528776f27c632d34bec52de09991385bb54
         repo: openstack/os-traits
     version: 0.7.0
+  - projects:
+      - hash: 88960e17fbaea0301882dc1251a6cdab3bfc1bcb
+        repo: openstack/os-traits
+    version: 0.8.0
