--- a/deliverables/rocky/cliff.yaml
+++ b/deliverables/rocky/cliff.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 92672471a2031a33c2b42218393d3305cdb2239a
         repo: openstack/cliff
     version: 2.12.1
+  - projects:
+      - hash: dd6abfffba239ff1be945dbd2b53a402d2757b46
+        repo: openstack/cliff
+    version: 2.13.0
