--- a/deliverables/queens/cliff.yaml
+++ b/deliverables/queens/cliff.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 134ebd4a9a5d981f3bccf4f074adc63f1df72f80
         repo: openstack/cliff
     version: 2.11.0
+  - projects:
+      - hash: 085310c89c744a78fa09d7b6eed32a3e325c18df
+        repo: openstack/cliff
+    version: 2.11.1
 branches:
   - name: stable/queens
     location: 2.11.0
