--- a/deliverables/pike/cliff.yaml
+++ b/deliverables/pike/cliff.yaml
@@ -25,6 +25,10 @@ releases:
     projects:
       - hash: 35f3820855413b4cd1065a00154efb82479cd328
         repo: openstack/cliff
+  - version: 2.8.2
+    projects:
+      - hash: 2df12e4342141db775e8e5daeabe6b06e49e74f9
+        repo: openstack/cliff
 branches:
   - name: stable/pike
     location: 2.8.0
