Oslo releases for 2018-7-3
Change-Id: Iecb1f6ddb2689ff641202a894bdde61dcd56ebfe

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -92,5 +92,9 @@ releases:
       - hash: ee26945cb3b290983a4b6d71bec2ed5aaf163989
         repo: openstack-dev/pbr
     version: 4.0.4
+  - projects:
+      - hash: 73234c84b58d317c0a944a5fb5a47e59ad267e3d
+        repo: openstack-dev/pbr
+    version: 4.1.0
 repository-settings:
   openstack-dev/pbr: {}
