--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -35,3 +35,7 @@ releases:
       - hash: 9c71b0140931b51ffffc3bbdc1b655fdaccce45b
         repo: openstack/oslo.config
     version: 6.2.2
+  - projects:
+      - hash: df0a57438f5e7927d3f323295365c6b4e6950e71
+        repo: openstack/oslo.config
+    version: 6.3.0
