--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -39,3 +39,7 @@ releases:
       - hash: d666aa8f0383d4fb46e278043e20e33908b26790
         repo: openstack/oslo.messaging
     version: 6.5.0
+  - projects:
+      - hash: 044e6f20e65084f3c4ecc554672d3271b2a2acd3
+        repo: openstack/oslo.messaging
+    version: 7.0.0
