TripleO ocata release
Change-Id: I01c0714c2ddc5440227db1baba90604dab4179e0

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -56,6 +56,10 @@ releases:
       - hash: 2849da2b6f8e3095eda2e8c7f311f8ae207a7c3c
         repo: openstack/instack-undercloud
     version: 6.1.7
+  - projects:
+      - hash: cc45c6689a7352e538a510cb98bbe79f1dad7f8e
+        repo: openstack/instack-undercloud
+    version: 6.1.8
 team: tripleo
 type: other
 repository-settings:
