--- a/deliverables/ocata/os-net-config.yaml
+++ b/deliverables/ocata/os-net-config.yaml
@@ -43,6 +43,10 @@ releases:
       - hash: 694f06c69bdffa7cae0d6cf2b7052ea3ab7a6590
         repo: openstack/os-net-config
     version: 6.1.4
+  - projects:
+      - hash: 6bc63d9155948322160bda3b89ab8c1e13b29cfe
+        repo: openstack/os-net-config
+    version: 6.1.5
 team: tripleo
 type: other
 repository-settings:
