--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -82,6 +82,10 @@ releases:
       - hash: 29f726588f241008442f5148ae2693672a2f4f36
         repo: openstack/puppet-tripleo
     version: 6.5.13
+  - projects:
+      - hash: 6e0ee312234c5b324950e04d2c85ef5879a520e0
+        repo: openstack/puppet-tripleo
+    version: 6.5.14
 team: tripleo
 type: other
 repository-settings:
