--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -92,6 +92,10 @@ releases:
       - hash: 57b81654f7cae989d8dcacf1e87901e041744b19
         repo: openstack/tripleo-heat-templates
     version: 6.2.14
+  - projects:
+      - hash: 4ec837e39c7434af8f227ec8ee0b8bb7dc82b90d
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.15
 team: tripleo
 type: other
 repository-settings:
