TripleO pike release
Change-Id: Ia662d9cd51b5a6a35d380a80a8a639e5a73131da

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -78,6 +78,10 @@ releases:
       - hash: d30ffb45217e90e234f9cfebc5ead9335ff7129f
         repo: openstack/instack-undercloud
     version: 7.4.12
+  - projects:
+      - hash: 4446d46e3d70d513e6c662af3726efd77ee1a28e
+        repo: openstack/instack-undercloud
+    version: 7.4.13
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
