--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -77,6 +77,10 @@ releases:
       - hash: e510993a5ef0855c3b314f97a24089f0753ef309
         repo: openstack/puppet-tripleo
     version: 7.4.13
+  - projects:
+      - hash: 5a0b738d513890122d79376eb720fb00ec134fd8
+        repo: openstack/puppet-tripleo
+    version: 7.4.14
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
