--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -62,6 +62,10 @@ releases:
       - hash: 158bcb2cd297d9f6e02bd033857d248d4fe2ab38
         repo: openstack/python-tripleoclient
     version: 7.3.10
+  - projects:
+      - hash: 77b99d617d7406994ba2318c509270163f3c5c67
+        repo: openstack/python-tripleoclient
+    version: 7.3.11
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
