--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -90,6 +90,10 @@ releases:
       - hash: 566b88d54f947f22efbafb8390e39bbfe8c61b2a
         repo: openstack/tripleo-common
     version: 7.6.13
+  - projects:
+      - hash: d92b678ca1ca83c97e369a9f72142583c986d785
+        repo: openstack/tripleo-common
+    version: 7.6.14
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
