--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -83,6 +83,10 @@ releases:
       - hash: b4d2c3892e264ad5e50c90c9b094d66e4eefd23d
         repo: openstack/tripleo-heat-templates
     version: 7.0.13
+  - projects:
+      - hash: af4661905b7d7281a4e8db5656844e80e1753702
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.14
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
