--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -59,6 +59,10 @@ releases:
       - hash: 1ab281355bc10f3b64ee0841ae8eaccf3aa6696e
         repo: openstack/tripleo-puppet-elements
     version: 7.0.7
+  - projects:
+      - hash: 2dc3e32a0e8c7fe8eedf56463342130e3fd6c1d9
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.8
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-puppet-elements/pike.html
