TripleO queens release
Change-Id: Ia7c45b414e3f72f68c651025bcdf91954c1df592

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: 0b94f102704728071cf662ec5951075f429937b6
         repo: openstack/instack-undercloud
     version: 8.4.2
+  - projects:
+      - hash: e4693063ead7b3c0d2edcbcbc8757b06f664bc64
+        repo: openstack/instack-undercloud
+    version: 8.4.3
 repository-settings:
   openstack/instack-undercloud: {}
 branches:
