--- a/deliverables/queens/os-net-config.yaml
+++ b/deliverables/queens/os-net-config.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: e78b09635c424b62b22ee7f19e36abfc71348b21
         repo: openstack/os-net-config
     version: 8.4.2
+  - projects:
+      - hash: 9084bb5e5788815158d536a13e2992715829a292
+        repo: openstack/os-net-config
+    version: 8.4.3
 repository-settings:
   openstack/os-net-config: {}
 branches:
