--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -32,6 +32,10 @@ releases:
       - hash: 3cfef05eeeb922042a551b5133f6a1c23cd19746
         repo: openstack/puppet-tripleo
     version: 8.3.3
+  - projects:
+      - hash: 15a81ad902728cf75750fad9bde3f8439a99f913
+        repo: openstack/puppet-tripleo
+    version: 8.3.4
 repository-settings:
   openstack/puppet-tripleo: {}
 branches:
