--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -36,6 +36,10 @@ releases:
       - hash: c7b7b4e3dcd34f9e51686065e328e73556967bab
         repo: openstack/python-tripleoclient
     version: 9.2.2
+  - projects:
+      - hash: 7c518a40d9bd2cc41e29b04c4e89d76f8eeae376
+        repo: openstack/python-tripleoclient
+    version: 9.2.3
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
 repository-settings:
   openstack/python-tripleoclient: {}
