--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -41,6 +41,10 @@ releases:
       - hash: 4279b1b5ab518324132fa2b6ea700345cd6f3617
         repo: openstack/tripleo-common
     version: 8.6.2
+  - projects:
+      - hash: 2ab80799a5423b49dbf5a0b56447b4301bfd9297
+        repo: openstack/tripleo-common
+    version: 8.6.3
 cycle-highlights:
   - |
     config-download: Ability to use Ansible to apply the cloud configuration.
