--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -42,6 +42,10 @@ releases:
       - hash: 3570a94a69e05af23cee11fbfaf3822538f75023
         repo: openstack/tripleo-heat-templates
     version: 8.0.3
+  - projects:
+      - hash: 1c58bba26884a21b08bea2d6fe6e6f1f63ff1360
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.4
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
