--- a/deliverables/queens/tripleo-ui.yaml
+++ b/deliverables/queens/tripleo-ui.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: c39808274640244998b16e47f11d3bd84ab29a2a
         repo: openstack/tripleo-ui
     version: 8.3.1
+  - projects:
+      - hash: 93101f26e25ec8788b061554d3181d4c84148c9c
+        repo: openstack/tripleo-ui
+    version: 8.3.2
 repository-settings:
   openstack/tripleo-ui: {}
 branches:
