--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -18,5 +18,9 @@ releases:
       - hash: 07d3828860ffd3078a5c594b7fc80b2ba9fc560a
         repo: openstack/openstacksdk
     version: 0.14.0
+  - projects:
+      - hash: cf47f3f7c01e3e878cdbc4c38ba7bd27c65df230
+        repo: openstack/openstacksdk
+    version: 0.15.0
 repository-settings:
   openstack/openstacksdk: {}
