--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -31,3 +31,7 @@ releases:
       - hash: 43af1cf08372006aa46d836ec45482dd4b5b5349
         repo: openstack/oslo.db
     version: 4.39.0
+  - projects:
+      - hash: dff11337f55b7a9a28d7c30658df51b7b0b443eb
+        repo: openstack/oslo.db
+    version: 4.40.0
