--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -35,6 +35,10 @@ releases:
       - hash: e69c768a3d2f38c140bf3d9228741cba7b08a6c5
         repo: openstack/networking-ovn
     version: 4.0.1
+  - projects:
+      - hash: 3b0a4cd9e1c510201df851a72fec0670f75bb1e7
+        repo: openstack/networking-ovn
+    version: 4.0.2
 repository-settings:
   openstack/networking-ovn: {}
 branches:
