--- a/deliverables/rocky/python-qinlingclient.yaml
+++ b/deliverables/rocky/python-qinlingclient.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/python-qinlingclient
         hash: 727cd89632650428c14bc7a2b5eb6a8d93584630
+  - version: 1.1.0
+    projects:
+      - repo: openstack/python-qinlingclient
+        hash: 01bd648986ba17b860d58af91e2c8c25337b8315
