Switch to stestr
According to Openstack summit session [1],
stestr is maintained project to which all Openstack projects should migrate.
Let's switch to stestr as other projects have already moved to it.

[1] https://etherpad.openstack.org/p/YVR-python-pti

Change-Id: Ifbcb65237598b99224768a47c18b30473c2eaa3e

--- a/tox.ini
+++ b/tox.ini
@@ -14,11 +14,15 @@ setenv =
    PYTHONUNBUFFERED=1
    LOGDIR={envdir}/log
    TMPDIR={envdir}/tmp
+   PYTHON=coverage run --source openstack_releases --parallel-mode
 basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
-  python setup.py testr --coverage --testr-args='{posargs}'
-  coverage report --show-missing
+    stestr run '{posargs}'
+    coverage combine
+    coverage html -d cover
+    coverage xml -o cover/coverage.xml
+    coverage report --show-missing
 
 [testenv:validate]
 deps =
@@ -55,9 +59,6 @@ commands = {posargs}
 
 [testenv:history]
 commands = {toxinidir}/tools/build_tag_history.sh {toxinidir}
-
-[testenv:cover]
-#commands = python setup.py testr --coverage --testr-args='{posargs}'
 
 [testenv:docs]
 deps =
