--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -853,6 +853,10 @@ releases:
       - hash: b6d44cf306fce11d16406bfe9c8f77844de41b2a
         repo: openstack/openstack-ansible
     version: 17.0.5
+  - projects:
+      - hash: a4fa7aee4366239560658c8f4b3846445fea6bd9
+        repo: openstack/openstack-ansible
+    version: 17.0.6
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
