--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1568,6 +1568,10 @@ releases:
       - hash: fc2cb9eef48cc13924fdedd1f881bfd4fc6f5bfa
         repo: openstack/openstack-ansible
     version: 16.0.14
+  - projects:
+      - hash: 856b731da2d484c1170282aa0758821840da79fb
+        repo: openstack/openstack-ansible
+    version: 16.0.15
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
