--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -2196,6 +2196,10 @@ releases:
       - hash: e99ae8deaa6c4c13bce9610a1544a832160acd57
         repo: openstack/openstack-ansible
     version: 15.1.22
+  - projects:
+      - hash: b54c9e5ef3922884dbb0acb652e139f13975ec6a
+        repo: openstack/openstack-ansible
+    version: 15.1.23
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
