--- a/deliverables/rocky/python-mistralclient.yaml
+++ b/deliverables/rocky/python-mistralclient.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 7451abb848f3f8b20c1f24575f427c4fbf5c0231
         repo: openstack/python-mistralclient
     version: 3.6.0
+  - projects:
+      - hash: 0059b271a600af6391e73d76a6c21b172d08f890
+        repo: openstack/python-mistralclient
+    version: 3.6.1
