Oslo releases for 2018-7-9
Unfortunate timing on a second oslo.messaging API break that landed
a day after the previous major release.  We plan to hold any further
such changes until next cycle so this should be the last one in
Rocky.

Change-Id: Iebf40a458d2555d9378007945685516512975e4b

--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -43,3 +43,7 @@ releases:
       - hash: 044e6f20e65084f3c4ecc554672d3271b2a2acd3
         repo: openstack/oslo.messaging
     version: 7.0.0
+  - projects:
+      - hash: 1f0682bc59be89bc9c6f1d471de81051319b6f8c
+        repo: openstack/oslo.messaging
+    version: 8.0.0
