--- a/deliverables/rocky/osprofiler.yaml
+++ b/deliverables/rocky/osprofiler.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 4bec736b1893e800ef27a0e457d2e227af3c56ae
         repo: openstack/osprofiler
     version: 2.2.0
+  - projects:
+      - hash: 6d68170f72ef303e6564e164aafb1ec53a8b8314
+        repo: openstack/osprofiler
+    version: 2.3.0
